--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>R.Z Portofolio</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root"></div><script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
